04_Argo_Rollouts_Canary/api-argo-canary-by-header.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api

---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: canary-api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ing
  namespace: api
  labels:
    app: api
    name: api-ing
spec:
  ingressClassName: nginx
  rules:
  - host: api-192.168.39.40.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-svc
            port:
              number: 3000

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api-ro
  namespace: api
  labels:
    app: api
    name: api-ro

spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
      name: api-po
      version: v1
  strategy:
    canary:
      maxSurge: 50%
      maxUnavailable: 0
      stableService: api-svc
      canaryService: canary-api-svc
      trafficRouting:
        nginx:
          stableIngress: api-ing
          additionalIngressAnnotations:
            canary-by-header: X-Version
            canary-by-header-value: v2
      steps:
      - setCanaryScale:
          weight: 25
      # - setWeight: 50
      - pause: {}

  template:
    metadata:
      labels:
        app: api
        name: api-po
        version: v1
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
