04_Argo_Rollouts_Canary/api-canary-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: api
  labels:
    app: api
    name: api-deploy
    version: v1

spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
      name: api-po
      version: v1
  template:
    metadata:
      labels:
        app: api
        name: api-po
        version: v1
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v2-api-deploy
  namespace: api
  labels:
    app: api
    name: api-deploy
    version: v2

spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      name: api-po
      version: v2
  template:
    metadata:
      labels:
        app: api
        name: api-po
        version: v2
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
    version: v1
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: v2-api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
    version: v2
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
    version: v2
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ing
  namespace: api
  labels:
    app: api
    name: api-ing
spec:
  ingressClassName: nginx
  rules:
  - host: api-192.168.39.40.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-svc
            port:
              number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v2-api-ing
  namespace: api
  labels:
    app: api
    name: api-ing
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
  ingressClassName: nginx
  rules:
  - host: api-192.168.39.40.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: v2-api-svc
            port:
              number: 3000
